Updates index.html to add Product hunt website badges

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                     </div>
                 </section>
             </div>
+            <a href="https://www.producthunt.com/posts/travelbudgetr?embed=true&utm_source=badge-featured&utm_medium=badge&utm_source=badge-travelbudgetr" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=965920&theme=light&t=1747324246065" alt="TravelBudgetr - Travel&#0032;worry&#0045;free&#0032;—&#0032;split&#0032;expenses&#0044;&#0032;keep&#0032;friendships&#0033; | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
         </main>
     </div>
     <script src="script.js"></script>
